// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inspect --diff output snapshots > shows added transition 1`] = `
"handler:GET /users/:id
  express handler
  1 change
    + 403 { error }  when  db.findById().restricted

"
`;

exports[`inspect --diff output snapshots > shows changed transition 1`] = `
"handler:GET /users/:id
  express handler
  1 change
    ~ 200 { id, name, email }  (default)
      -> 200 { id, name, email, avatar }  (default)

"
`;

exports[`inspect --diff output snapshots > shows new and removed summaries 1`] = `
"+ client:GET /users/:id
  new client with 2 transitions

- handler:GET /users/:id
  removed handler (had 3 transitions)

"
`;

exports[`inspect --diff output snapshots > shows no changes for identical files 1`] = `
"No behavioral changes.
"
`;

exports[`inspect --diff output snapshots > shows removed transition 1`] = `
"handler:GET /users/:id
  express handler
  1 change
    - 200 { id, name, email }  (default)

"
`;

exports[`inspect --dir output snapshots > shows paired boundaries with transition counts 1`] = `
"1 paired boundary:

  GET /users/{id}
    provider: getUser (express, 3 transitions)
    client:   loadUser (fetch, 2 transitions)

2 summaries from 2 files.
"
`;

exports[`inspect --dir output snapshots > shows unmatched summaries 1`] = `
"1 unmatched:
  getUser (GET /users/:id) — no matching client

1 summaries from 1 files.
"
`;

exports[`inspect output snapshots > renders a client summary 1`] = `
"GET /users/:id
  fetch client | src/pages/user.ts:5

    -> throw Error  when  !fetch().ok
    -> return  (default)

1 summaries inspected.
"
`;

exports[`inspect output snapshots > renders a handler with contract and body shapes 1`] = `
"GET /users/:id
  express handler | src/handlers/users.ts:10
  Contract: 200, 400, 404, 500

    -> 400 { error }  when  !req.params.id
    -> 404 { error }  when  db.findById() == null
    -> 200 { id, name, email }  (default)

1 summaries inspected.
"
`;

exports[`inspect output snapshots > renders multiple summaries 1`] = `
"GET /users/:id
  express handler | src/handlers/users.ts:10
  Contract: 200, 400, 404, 500

    -> 400 { error }  when  !req.params.id
    -> 404 { error }  when  db.findById() == null
    -> 200 { id, name, email }  (default)

GET /users/:id
  fetch client | src/pages/user.ts:5

    -> throw Error  when  !fetch().ok
    -> return  (default)

2 summaries inspected.
"
`;

exports[`inspect variant rendering > renders every Output variant 1`] = `
"GET /users/:id
  express handler | src/handlers/users.ts:10
  Contract: 200, 400, 404, 500

    -> throw ValidationError

GET /users/:id
  express handler | src/handlers/users.ts:10
  Contract: 200, 400, 404, 500

    -> render <ErrorPage />

GET /users/:id
  express handler | src/handlers/users.ts:10
  Contract: 200, 400, 404, 500

    -> return string

GET /users/:id
  express handler | src/handlers/users.ts:10
  Contract: 200, 400, 404, 500

    -> delegate -> next

GET /users/:id
  express handler | src/handlers/users.ts:10
  Contract: 200, 400, 404, 500

    -> emit "user.created"

GET /users/:id
  express handler | src/handlers/users.ts:10
  Contract: 200, 400, 404, 500

    -> void

6 summaries inspected.
"
`;

exports[`inspect variant rendering > renders every Predicate variant 1`] = `
"GET /users/:id
  express handler | src/handlers/users.ts:10
  Contract: 200, 400, 404, 500

    -> 200  when  1 !== 2 && req.query.id && db.findById() == null && typeof err === "Error" && !obj.has("id") && isValid(x) && a || b && !(1 > 0) && weirdSync()

1 summaries inspected.
"
`;

exports[`inspect variant rendering > renders every ValueRef and Derivation variant 1`] = `
"GET /users/:id
  express handler | src/handlers/users.ts:10
  Contract: 200, 400, 404, 500

    -> 200  when  db().result === 1 && arr.[0] === "x" && fetch().await.json().kind === "ok" && state.loaded === MAGIC

1 summaries inspected.
"
`;

exports[`inspect variant rendering > renders every primitive TypeShape variant in body shapes 1`] = `
"GET /users/:id
  express handler | src/handlers/users.ts:10
  Contract: 200, 400, 404, 500

    -> 200 { text, int, num, bool, n }

1 summaries inspected.
"
`;

exports[`inspect variant rendering > renders union, array, dictionary, ref, literal, undefined, unknown TypeShapes 1`] = `
"GET /users/:id
  express handler | src/handlers/users.ts:10
  Contract: 200, 400, 404, 500

    -> 200 { tags, byKey, shape, literal, ... }

1 summaries inspected.
"
`;

exports[`inspect variant rendering > simplifies double negations and !truthinessCheck via the negation handler 1`] = `
"GET /users/:id
  express handler | src/handlers/users.ts:10
  Contract: 200, 400, 404, 500

    -> 200  when  x && !y && z != null

1 summaries inspected.
"
`;
